--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 <body>
 <main>
     <header>
-        <h1>Titulo do site</h1>
+        <h1>Cursos Grátis</h1>
     </header>
     <article>
-        <h2>artigo 001</h2>
+        <h2>Curso de HTML 5 com CSS3</h2>
         <p>artigo 001</p>
     </article>
     <article>
-        <h2>artigo 002
-            <p>artigo 002</p>
-        </h2>
+        <h2>Curso de javascript</h2> 
+        <p>artigo 002</p>
     </article>
 </main>
 </body>
